swag -toggle
