# docs/swagger.json
@@ -360,7 +360,7 @@
                 }
             }
         },
-        "/user/favorite/{name}/{email}": {
+        "/user/toggle/favorite": {
             "post": {
                 "description": "Toggle manga",
                 "consumes": [
@@ -379,14 +379,14 @@
                         "type": "string",
                         "description": "manga name",
                         "name": "name",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "email",
                         "name": "email",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
